Покрыл все функции тестами
